--- a/Examples/Hydrological model/Note books/01Calib-Lumped_Model.ipynb
+++ b/Examples/Hydrological model/Note books/01Calib-Lumped_Model.ipynb
@@ -1,16 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b28a9387-0f0c-4c9d-a52d-b3a3a5618aac",
+   "metadata": {},
+   "source": [
+    "# Lumped Model Calibration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b408ce7-52aa-401b-bcd5-132255e46cf3",
+   "metadata": {},
+   "source": [
+    "- Please change the Path in the following cell to the directory where you stored the case study data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ad01687e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "Path = \"F:/02Case studies/Coello\"\n",
-    "os.chdir(Path)\n",
-    "#os.listdir(Path)"
+    "os.chdir(Path)"
    ]
   },
   {
@@ -23,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "54aa43b6",
    "metadata": {},
    "outputs": [],
@@ -49,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "576dd8b4",
    "metadata": {},
    "outputs": [],
@@ -70,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a89ee25b",
    "metadata": {},
    "outputs": [
@@ -101,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f29da93b",
    "metadata": {},
    "outputs": [
@@ -134,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7db2ce2d",
    "metadata": {},
    "outputs": [
@@ -203,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "42e7aaea",
    "metadata": {},
    "outputs": [
