--- a/Examples/Hydrological model/Note books/02Calibrate-Hapi.ipynb
+++ b/Examples/Hydrological model/Note books/02Calibrate-Hapi.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "75d19ebc-b4dd-49b5-96c6-5732e9dfb794",
+   "metadata": {},
+   "source": [
+    "# Hapi Calibration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06866108-fead-4f50-802f-188297d3c1e0",
+   "metadata": {},
+   "source": [
+    "- please change the Path to the directory where you stored the case study data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "25623895",
