--- a/Examples/Satellite data/Download Satellite data.ipynb
+++ b/Examples/Satellite data/Download Satellite data.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e9ab20a1-786f-4692-913e-94f2f85b0281",
    "metadata": {},
    "outputs": [
@@ -175,8 +175,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress: |█████---------------------------------------------| 10.0% Complete"
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
