--- a/Examples/Hydrological model/Note books/02Coello-Hapi.ipynb
+++ b/Examples/Hydrological model/Note books/02Coello-Hapi.ipynb
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bf034b9d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime as dt\n",
-    "from Hapi.rrm.run import Run\n",
+    "from Hapi.run import Run\n",
     "from Hapi.catchment import Catchment\n",
     "import Hapi.rrm.hbv_bergestrom92 as HBV"
    ]
@@ -166,7 +166,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "89aa8f1d-b7d9-4edc-9ff6-44719155ef84",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
