update hydrological model examples

--- a/Examples/Hydrological model/Note books/02Calibrate-Hapi.ipynb
+++ b/Examples/Hydrological model/Note books/02Calibrate-Hapi.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "25623895",
    "metadata": {},
    "outputs": [],
@@ -28,19 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ef94568f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import datetime as dt\n",
-    "import gdal\n",
+    "from osgeo import gdal\n",
     "from Hapi.rrm.calibration import Calibration\n",
     "import Hapi.rrm.hbv_bergestrom92 as HBV\n",
     "\n",
     "from Hapi.rrm.distparameters import DistParameters as DP\n",
-    "import Hapi.statistics.performancecriteria as PC"
+    "import Hapi.sm.performancecriteria as PC"
    ]
   },
   {
@@ -516,9 +516,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-b0a8381a",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (HAPI)"
   },
   "language_info": {
    "codemirror_mode": {
