--- a/Examples/Hydrological model/Note books/Lumped-Model_Run.ipynb
+++ b/Examples/Hydrological model/Note books/Lumped-Model_Run.ipynb
@@ -52,7 +52,7 @@
     "from Hapi.run import Run\n",
     "from Hapi.catchment import Catchment\n",
     "from Hapi.rrm.routing import Routing\n",
-    "import Hapi.statistics.performancecriteria as PC"
+    "import Hapi.sm.performancecriteria as PC"
    ]
   },
   {
