add deap calibration for hydrological model

--- a/Examples/Hydrological model/03Jiboa.ipynb
+++ b/Examples/Hydrological model/03Jiboa.ipynb
@@ -39,22 +39,24 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
+    "\n",
     "Path = \"F:/02Case studies/El Salvador\"\n",
     "\n",
     "os.chdir(Path)\n",
     "\n",
     "#%library\n",
-    "import gdal\n",
+    "from osgeo import gdal\n",
     "import datetime as dt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# HAPI modules\n",
-    "from Hapi.run import RunHAPIwithLake\n",
-    "import Hapi.hbv as HBV\n",
-    "import Hapi.performancecriteria as Pf\n",
-    "import Hapi.raster as Raster"
+    "from Hapi.rrm import RunHAPIwithLake\n",
+    "import Hapi.rrm.hbv as HBV\n",
+    "import Hapi.sm.performancecriteria as Pf\n",
+    "import Hapi.gis.raster as Raster"
    ]
   },
   {
@@ -64,9 +66,9 @@
    "outputs": [],
    "source": [
     "# the beginning of the simulation of the calibration data\n",
-    "start = dt.datetime(2012,6,14,19,00,00)\n",
-    "end = dt.datetime(2014,11,17,00,00,00)\n",
-    "calib_end = dt.datetime(2013,12,23,00,00,00)\n",
+    "start = dt.datetime(2012, 6, 14, 19, 00, 00)\n",
+    "end = dt.datetime(2014, 11, 17, 00, 00, 00)\n",
+    "calib_end = dt.datetime(2013, 12, 23, 00, 00, 00)\n",
     "\n",
     "# paths to the meteorological data\n",
     "PrecPath = prec_path = \"inputs/Hapi/meteodata/4000/calib/prec_clipped\"\n",
@@ -78,7 +80,7 @@
     "FlowDPath = \"inputs/Hapi/GIS/4000_matched/fd4000.tif\"\n",
     "ParPath = \"inputs/Hapi/meteodata/4000/parameters/\"\n",
     "#ParPath = \"inputs/Hapi/meteodata/4000/\"+\"parameters.txt\"\n",
-    "Paths=[PrecPath, Evap_Path, TempPath, FlowAccPath, FlowDPath, ]"
+    "Paths = [PrecPath, Evap_Path, TempPath, FlowAccPath, FlowDPath, ]"
    ]
   },
   {
@@ -93,20 +95,19 @@
     "init_st = np.loadtxt(\"inputs/Hapi/meteodata/Initia-jiboa.txt\", usecols=0).tolist()\n",
     "snow = 0\n",
     "\n",
-    "\n",
     "# lake meteorological data\n",
-    "ind = pd.date_range(start, end, freq = \"H\" )\n",
-    "lakedata = pd.read_csv(\"inputs/Hapi/meteodata/lakedata.csv\", index_col = 0)\n",
+    "ind = pd.date_range(start, end, freq=\"H\")\n",
+    "lakedata = pd.read_csv(\"inputs/Hapi/meteodata/lakedata.csv\", index_col=0)\n",
     "lakedata.index = ind\n",
     "lakeCalib = lakedata.loc[start:calib_end]\n",
     "lakeValid = lakedata.loc[calib_end:end]\n",
     "# convert the dataframe into array\n",
     "lakeCalibArray = lakeCalib.values\n",
     "# take only the plake, et, t and tm columns and exclude the last column\n",
-    "lakeCalibArray = lakeCalibArray[:,0:-1]\n",
+    "lakeCalibArray = lakeCalibArray[:, 0:-1]\n",
     "\n",
     "# where the lake discharges its flow (give the indices of the cell)\n",
-    "lakecell = [2,1]    # 4km\n",
+    "lakecell = [2, 1]  # 4km\n",
     "#lakecell = [4,2]    # 2km\n",
     "#lakecell = [10,4]    # 1km\n",
     "#lakecell = [19,10]    # 500m\n",
@@ -140,10 +141,10 @@
     }
    ],
    "source": [
-    "Sim =pd.DataFrame(index = lakeCalib.index)\n",
+    "Sim = pd.DataFrame(index=lakeCalib.index)\n",
     "st, Sim['Q'], q_uz_routed, q_lz_trans = RunHAPIwithLake(HBV, Paths, ParPath, p2, init_st,\n",
-    "                                                     snow, lakeCalibArray, StageDischargeCurve,\n",
-    "                                                     LakeParameters, lakecell,Lake_init_st)"
+    "                                                        snow, lakeCalibArray, StageDischargeCurve,\n",
+    "                                                        LakeParameters, lakecell, Lake_init_st)"
    ]
   },
   {
@@ -176,21 +177,21 @@
     "WS = {}\n",
     "WS['type'] = 1\n",
     "WS['N'] = 3\n",
-    "ModelMetrics=dict()\n",
-    "ModelMetrics['CalibErrorHf']=Pf.RMSEHF(lakeCalib['Q'],Sim['Q'],WS['type'],WS['N'],0.75)\n",
-    "ModelMetrics['CalibErrorLf']=Pf.RMSELF(lakeCalib['Q'],Sim['Q'],WS['type'],WS['N'],0.75)\n",
-    "ModelMetrics['CalibNSEHf']=Pf.NSE(lakeCalib['Q'],Sim['Q'])\n",
-    "ModelMetrics['CalibNSELf']=Pf.NSE(np.log(lakeCalib['Q']),np.log(Sim['Q']))\n",
-    "ModelMetrics['CalibRMSE']=Pf.RMSE(lakeCalib['Q'],Sim['Q'])\n",
-    "ModelMetrics['CalibKGE']=Pf.KGE(lakeCalib['Q'],Sim['Q'])\n",
-    "ModelMetrics['CalibWB']=Pf.WB(lakeCalib['Q'],Sim['Q'])\n",
-    "print(\"RMSE(HF) = \" + str(round(ModelMetrics['CalibErrorHf'],2)))\n",
-    "print(\"RMSE(LF) = \" + str(round(ModelMetrics['CalibErrorLf'],2)))\n",
-    "print(\"RMSE = \" + str(round(ModelMetrics['CalibRMSE'],2)))\n",
-    "print(\"NSE(HF) = \" + str(round(ModelMetrics['CalibNSEHf'],2)))\n",
-    "print(\"NSE(LF) = \" + str(round(ModelMetrics['CalibNSELf'],2)))\n",
-    "print(\"KGE = \" + str(round(ModelMetrics['CalibKGE'],2)))\n",
-    "print(\"WB = \" + str(round(ModelMetrics['CalibWB'],2)))"
+    "ModelMetrics = dict()\n",
+    "ModelMetrics['CalibErrorHf'] = Pf.RMSEHF(lakeCalib['Q'], Sim['Q'], WS['type'], WS['N'], 0.75)\n",
+    "ModelMetrics['CalibErrorLf'] = Pf.RMSELF(lakeCalib['Q'], Sim['Q'], WS['type'], WS['N'], 0.75)\n",
+    "ModelMetrics['CalibNSEHf'] = Pf.NSE(lakeCalib['Q'], Sim['Q'])\n",
+    "ModelMetrics['CalibNSELf'] = Pf.NSE(np.log(lakeCalib['Q']), np.log(Sim['Q']))\n",
+    "ModelMetrics['CalibRMSE'] = Pf.RMSE(lakeCalib['Q'], Sim['Q'])\n",
+    "ModelMetrics['CalibKGE'] = Pf.KGE(lakeCalib['Q'], Sim['Q'])\n",
+    "ModelMetrics['CalibWB'] = Pf.WB(lakeCalib['Q'], Sim['Q'])\n",
+    "print(\"RMSE(HF) = \" + str(round(ModelMetrics['CalibErrorHf'], 2)))\n",
+    "print(\"RMSE(LF) = \" + str(round(ModelMetrics['CalibErrorLf'], 2)))\n",
+    "print(\"RMSE = \" + str(round(ModelMetrics['CalibRMSE'], 2)))\n",
+    "print(\"NSE(HF) = \" + str(round(ModelMetrics['CalibNSEHf'], 2)))\n",
+    "print(\"NSE(LF) = \" + str(round(ModelMetrics['CalibNSELf'], 2)))\n",
+    "print(\"KGE = \" + str(round(ModelMetrics['CalibKGE'], 2)))\n",
+    "print(\"WB = \" + str(round(ModelMetrics['CalibWB'], 2)))"
    ]
   },
   {
@@ -222,12 +223,12 @@
     }
    ],
    "source": [
-    "plt.figure(50,figsize=(15,8))\n",
-    "Sim.Q.plot(color=[(0,0.3,0.7)],linewidth=2.5,label=\"Simulated data\", zorder = 10)\n",
-    "ax1=lakeCalib['Q'].plot(color='#DC143C',linewidth=2.8,label='Observed data')\n",
-    "ax1.annotate(\"Model performance\" ,xy=('2012-12-01 00:00:00',20),fontsize=15)\n",
-    "ax1.annotate(\"RMSE = \" + str(round(ModelMetrics['CalibRMSE'],3)),xy=('2012-12-01 00:00:00',20-1.5),fontsize=15)\n",
-    "ax1.annotate(\"NSE = \" + str(round(ModelMetrics['CalibNSEHf'],2)),xy=('2012-12-01 00:00:00',20-3),fontsize=15)\n",
+    "plt.figure(50, figsize=(15, 8))\n",
+    "Sim.Q.plot(color=[(0, 0.3, 0.7)], linewidth=2.5, label=\"Simulated data\", zorder=10)\n",
+    "ax1 = lakeCalib['Q'].plot(color='#DC143C', linewidth=2.8, label='Observed data')\n",
+    "ax1.annotate(\"Model performance\", xy=('2012-12-01 00:00:00', 20), fontsize=15)\n",
+    "ax1.annotate(\"RMSE = \" + str(round(ModelMetrics['CalibRMSE'], 3)), xy=('2012-12-01 00:00:00', 20 - 1.5), fontsize=15)\n",
+    "ax1.annotate(\"NSE = \" + str(round(ModelMetrics['CalibNSEHf'], 2)), xy=('2012-12-01 00:00:00', 20 - 3), fontsize=15)\n",
     "plt.legend()"
    ]
   },
@@ -245,18 +246,17 @@
    "outputs": [],
    "source": [
     "# create list of names\n",
-    "src=gdal.Open(FlowAccPath)\n",
+    "src = gdal.Open(FlowAccPath)\n",
     "\n",
-    "index=pd.date_range(start,calib_end,freq=\"1H\")\n",
+    "index = pd.date_range(start, calib_end, freq=\"1H\")\n",
     "\n",
-    "resultspath=\"results/upper_zone_discharge/4000/\"\n",
-    "names=[resultspath+str(i)[:-6] for i in index]\n",
-    "names=[i.replace(\"-\",\"_\") for i in names]\n",
-    "names=[i.replace(\" \",\"_\") for i in names]\n",
-    "names=[i+\".tif\" for i in names]\n",
+    "resultspath = \"results/upper_zone_discharge/4000/\"\n",
+    "names = [resultspath + str(i)[:-6] for i in index]\n",
+    "names = [i.replace(\"-\", \"_\") for i in names]\n",
+    "names = [i.replace(\" \", \"_\") for i in names]\n",
+    "names = [i + \".tif\" for i in names]\n",
     "\n",
-    "\n",
-    "Raster.RastersLike(src,q_uz_routed[:,:,:-1],names)\n"
+    "Raster.RastersLike(src, q_uz_routed[:, :, :-1], names)\n"
    ]
   }
  ],
