fix bugs, all examples are working

--- a/Examples/Hydrological model/Note books/check-colab/Jiboa-distributed-model-muskingum-lake-colab.ipynb
+++ b/Examples/Hydrological model/Note books/check-colab/Jiboa-distributed-model-muskingum-lake-colab.ipynb
@@ -135,7 +135,7 @@
     "os.chdir(Path)\n",
     "\n",
     "#%library\n",
-    "import gdal\n",
+    "from osgeo import gdal\n",
     "import datetime as dt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -143,9 +143,9 @@
     "\n",
     "# HAPI modules\n",
     "from Hapi.run import RunHAPIwithLake\n",
-    "import Hapi.hbv as HBV\n",
-    "import Hapi.performancecriteria as Pf\n",
-    "import Hapi.raster as Raster"
+    "import Hapi.rrm.hbv as HBV\n",
+    "import Hapi.sm.performancecriteria as Pf\n",
+    "import Hapi.gis.raster as Raster"
    ]
   },
   {
